--- a/bin/server.cfg
+++ b/bin/server.cfg
@@ -25,6 +25,8 @@ rtc_port = 9000
 central_ip = 0.0.0.0
 central_port = 9501
 
+web_http_wan_port = 9202
+
 mqtt_host = 192.168.2.51
 mqtt_port = 1883
 mqtt_user = admin
