--- a/cdron_video_analysis/cdron_video_analysis.vcxproj
+++ b/cdron_video_analysis/cdron_video_analysis.vcxproj
@@ -74,10 +74,11 @@
     <IncludePath>$(C_INCLUDE)\onnxruntime\include;$(C_INCLUDE)\json\include;$(C_INCLUDE)\libhv\include;$(C_INCLUDE)\opencv\include;$(C_INCLUDE)\libtorch\include;$(C_INCLUDE)\libtorch\include\torch\csrc\api\include;$(C_INCLUDE)\MNN\include;C:\Program Files\NVIDIA Corporation\NvToolsExt\\include;C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v11.8\include;C:\Program Files\NVIDIA Corporation\NvToolsExt\include;$(IncludePath)</IncludePath>
     <OutDir>$(SolutionDir)bin\$(Platform)\$(Configuration)\</OutDir>
     <IntDir>$(ProjectDir)..\vsout\$(Platform)\$(Configuration)\$(ProjectName)\</IntDir>
+    <LibraryPath>$(ProjectDir)..\lib\$(Platform)\$(Configuration);$(C_INCLUDE)\boost_1_66_0\lib;$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <IncludePath>$(C_INCLUDE)\onnxruntime\include;$(C_INCLUDE)\json\include;$(C_INCLUDE)\libhv\include;$(C_INCLUDE)\opencv\include;$(C_INCLUDE)\MNN\include;C:\Program Files\NVIDIA Corporation\NvToolsExt\\include;C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v11.8\include;C:\Program Files\NVIDIA Corporation\NvToolsExt\include;$(C_INCLUDE)\boost\include;$(C_INCLUDE)\openssl_1.1.0\include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(C_INCLUDE)\json\lib\x64\release;$(C_INCLUDE)\opencv\x64\vc16\lib;$(C_INCLUDE)\onnxruntime\lib;$(C_INCLUDE)\libtorch\lib;$(C_INCLUDE)\MNN\lib\x64\Release\Static\MD;$(C_INCLUDE)\libhv\lib;$(C_INCLUDE)\boost\lib\x64;$(C_INCLUDE)\openssl_1.1.0\lib\x64\release;$(LibraryPath)</LibraryPath>
+    <LibraryPath>$(ProjectDir)..\lib\$(Platform)\$(Configuration);$(C_INCLUDE)\boost_1_66_0\lib;$(C_INCLUDE)\json\lib\x64\release;$(C_INCLUDE)\opencv\x64\vc16\lib;$(C_INCLUDE)\onnxruntime\lib;$(C_INCLUDE)\libtorch\lib;$(C_INCLUDE)\MNN\lib\x64\Release\Static\MD;$(C_INCLUDE)\libhv\lib;$(C_INCLUDE)\boost\lib\x64;$(C_INCLUDE)\openssl_1.1.0\lib\x64\release;$(LibraryPath)</LibraryPath>
     <OutDir>$(SolutionDir)bin\$(Platform)\$(Configuration)\</OutDir>
     <IntDir>$(ProjectDir)..\vsout\$(Platform)\$(Configuration)\$(ProjectName)\</IntDir>
   </PropertyGroup>
